fix clipped steps menu

--- a/src/containers/Invest/index.scss
+++ b/src/containers/Invest/index.scss
@@ -167,6 +167,9 @@
                                     @media screen and (max-width:1440px) {
                                         font-size: 13px;
                                     }
+                                    @media screen and (max-width:430px) {
+                                        font-size: 10px;
+                                    }
                                 }
                             }
                         }
